Se cambia el nombre de una 'regla' y se agrega menu contextual para las unidades

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,19 +8,11 @@ TowerDefence.scenary.height=600
 Bullet.speed=500
 Bullet.sprite=images/shoot.png
 
-BasicTower.level1.shoot.sound=/sounds/missile.wav
-
-BasicTower.level1.width=20
-BasicTower.level2.width=20
-BasicTower.level3.width=20
-BasicTower.level4.width=20
-BasicTower.level5.width=20
-
-BasicTower.level1.height=20
-BasicTower.level2.height=20
-BasicTower.level3.height=20
-BasicTower.level4.height=20
-BasicTower.level5.height=20
+BasicTower.name=Torre básica
+BasicTower.shoot.sound=/sounds/missile.wav
+BasicTower.width=20
+BasicTower.height=20
+BasicTower.cost=200;
 
 BasicTower.level1.bullet.range=100
 BasicTower.level2.bullet.range=150
@@ -39,6 +31,12 @@ BasicTower.level2.bullet.power=1
 BasicTower.level3.bullet.power=1
 BasicTower.level4.bullet.power=1
 BasicTower.level5.bullet.power=1
+
+BasicTower.level1.levelup.cost=25
+BasicTower.level2.levelup.cost=50
+BasicTower.level3.levelup.cost=100
+BasicTower.level4.levelup.cost=150
+BasicTower.level5.levelup.cost=0
 
 #---------------------------------------------------------------------------
 # Enemigos
