--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
 			<artifactId>objectpool</artifactId>
 			<version>1.1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.8.4</version>
+		</dependency>   
 	</dependencies>
 </project>
