Se agrego el grafo a Scenary

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,6 +4,8 @@ TowerDefence.game.height=700
 
 TowerDefence.scenary.width=900
 TowerDefence.scenary.height=600
+TowerDefence.scenary.columns=45
+TowerDefence.scenary.rows=30
 
 Bullet.speed=500
 Bullet.sprite=images/shoot.png
