se agrego la suma de puntos

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,6 +2,9 @@ TowerDefence.title=TPI Tower Defence!
 TowerDefence.game.width=1000
 TowerDefence.game.height=700
 
+PointsCounter.hitPoints=100
+PointsCounter.killPoints=500
+
 TowerDefence.scenary.width=900
 TowerDefence.scenary.height=600
 TowerDefence.scenary.columns=45
