Subiendo cambios en los contadores y merge

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,13 +2,7 @@ TowerDefence.title=TPI Tower Defence!
 TowerDefence.game.width=1000
 TowerDefence.game.height=700
 
-PointsCounter.hitPoints=100
-PointsCounter.killPoints=500
-
-TowerDefence.scenary.width=900
-TowerDefence.scenary.height=600
-TowerDefence.scenary.columns=45
-TowerDefence.scenary.rows=30
+TowerDefence.scenary.cellSize=20
 
 Bullet.speed=500
 Bullet.sprite=images/shoot.png
@@ -46,8 +40,20 @@ BasicTower.level5.levelup.cost=0
 #---------------------------------------------------------------------------
 # Enemigos
 #---------------------------------------------------------------------------
+
+# ==================
+# === BasicEnemy ===
+# ==================
+
 BasicEnemy.lives=5
 BasicEnemy.width=15
 BasicEnemy.height=15
+
 BasicEnemy.explosion.sound=/sounds/blast.wav
 BasicEnemy.explosion.sound.volume=100
+
+BasicEnemy.hit.points=10
+BasicEnemy.hit.money=0
+
+BasicEnemy.kill.points=100
+BasicEnemy.kill.money=100
