Subiendo todo lo que tengo hasta hoy.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -18,7 +18,7 @@ BasicTower.name=Torre básica
 BasicTower.shoot.sound=/sounds/missile.wav
 BasicTower.width=10
 BasicTower.height=10
-BasicTower.cost=200;
+BasicTower.cost=200
 
 BasicTower.level1.bullet.range=100
 BasicTower.level2.bullet.range=150
@@ -53,8 +53,8 @@ BasicTower.level5.levelup.cost=0
 # ==================
 
 BasicEnemy.lives=5
-BasicEnemy.width=15
-BasicEnemy.height=15
+BasicEnemy.width=10
+BasicEnemy.height=10
 
 BasicEnemy.explosion.sound=/sounds/blast.wav
 BasicEnemy.explosion.sound.volume=100
